--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "canvas-sketch": "^0.7.6",
     "canvas-sketch-util": "^1.10.0",
-    "tweakpane": "^3.1.0"
+    "tweakpane": "^3.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "canvas-sketch-cli": "^1.11.20"
